Changed package structure to default play style

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,7 @@ play {
   }
   modules {
     enabled += be.objectify.deadbolt.scala.DeadboltModule
-    enabled += be.objectify.examples.auth0.CustomBindings
+    enabled += modules.CustomBindings
   }
 }
 
