--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
-name=play-with-angular
+name=play-with-deadbolt-and-auth0
 title=Play Framework with Deadbolt and Auth0
 description=A starter application for Play applications using Deadbolt for authorization and the identity management platform Auth0 for authentication.
 tags=playframework,deadbolt,security,scala
